rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_avg_keeps_its_own_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | carts__avg_value    | checkouts__unique_msid
---------------+---------------------+-----------------------
DE             | 40.0000000000000000 | 0                     
US             | 20.0000000000000000 | 2
