rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_count_keeps_its_own_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | carts__count | checkouts__unique_msid
---------------+--------------+-----------------------
DE             | 1            | 0                     
US             | 3            | 2
