rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_count_star_expression_keeps_its_own_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | total_count | checkouts__unique_msid
---------------+-------------+-----------------------
US             | 2           | 2                     
DE             | 1           | 0
