rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_distinct_measures_share_one_base_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | carts__unique_msid | checkouts__unique_msid
---------------+--------------------+-----------------------
DE             | 1                  | 0                     
US             | 2                  | 2
