rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_filter_on_deeper_cube_leaves_one_tree.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | carts__unique_msid | checkouts__unique_msid
---------------+--------------------+-----------------------
US             | 2                  | 1
