rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_min_max_alone.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | carts__max_value | carts__min_value
---------------+------------------+-----------------
DE             | 40.00            | 40.00           
US             | 30.00            | 10.00
