rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_sum_keeps_its_own_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
sites__country | carts__total_value | checkouts__total_amount
---------------+--------------------+------------------------
DE             | 40.00              | NULL                   
US             | 60.00              | 600.00
