rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__nested_join_trees__nested_trees_view_measures_share_one_base_scan.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/nested_join_trees.rs
expression: result
---
funnel__country | funnel__unique_msid | funnel__checkouts_unique_msid
----------------+---------------------+------------------------------
DE              | 1                   | 0                            
US              | 2                   | 2
